Changes for v1.25
- Add variant 3 of Pioneer MIX protocol

Changes for v1.24a
- Fixes for importing External Functions

Changes for v1.24
- Add support for importing External Functions

Changes for v1.23
- Fix Panasonic MIX Combo hex generation
- Add Panasonic2 (LCD-Official)
- Fix importing of KM upgrades with extra commas
- Match PID as well as name when importing KM upgrades.

Changes for v1.22
- More progress on Protocol Editor
- RM Images and Maps v1.21 from Nils
- Added GXB protocol (thanks johnsfine)
- Modified Streamzap protocol to be compatible with decodes (thanks johnsfine)
- Added 56Khz version of Streamzap (thanks johnsfine)
- Added Somfy (thanks johnsfine)
- Fixes for Pioneer Mix protocol
- Fixed startup problems when UpgradePath in properties file points to a drive that doesn't exist

Changes for v1.21
- Improvements to phantom button support on Layout panel
- Fix bug with entering OBCs on Functions panel for some protocols

Changes for v1.20
- Fix saving of imported KM upgrades that use Manual Settings with byte2
- Improve translation of new S3C80 protocol code to old S3C80.
- Add phantom buttons to Layout panel
- Add assigned buttons to hover help text for functions on Buttons and Layout panels

Changes for v1.19
- Fix importing of KM upgrades that use Manual Settings and have a value in byte2

Changes for v1.18
- Improve importing of KM upgrades that use Device Combiner
- Fix importing of KM upgrades that use Panasonic MIX Combo

Changes for v1.17
- Fixed startup problems when using preferred remotes
- Add MCE protocol.

Changes for v1.16
- First set of changes for Protocol Editor (see Advanced->Protocol Editor or pedit.bat)
- Change RDF file name parsing for Nils
- More changes for importing ManualSettngs
- Added protocol RC6-6-32

Changes for v1.15
- Corrected Akai entry in protocols.ini (thanks johnsfine!)
- Enabled pid-0083 for TV-0159 (thanks johnsfine!)
- More fixes for importing KM device ugprades that use Manual Settings

Changes for v1.14