@@ -1,5 +1,6 @@
 Changes for v1.25
 - Add variant 3 of Pioneer MIX protocol
+- More fixes for importing External Functions
 
 Changes for v1.24a
 - Fixes for importing External Functions
